Entorno de competiciones

--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
@@ -61,7 +61,7 @@
       <div class="col-xs-12 col-sm-8 col-sm-push-4">
          <table class="table table-responsive">
             <tbody>
-               <tr><td><strong>Tipo:</strong></td><td>AIRE LIBRE</td></tr>
+               <tr><td><strong>Tipo:</strong></td><td>{{ entorno }}</td></tr>
                <tr><td><strong>Ubicacion:</strong></td><td>{{ com.ubicacion }}</td></tr>
                <tr><td colspan="2"><strong>Descripción:</strong></td></tr>
                <tr><td colspan="2"><p>{{ com.desc|nl2br|converturls }}</p></td></tr>
