--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/borr_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/borr_inscripcion.html.twig
@@ -13,7 +13,7 @@
                 <tr><th>Prueba</th><th>Precio</th><th>Estado</th><th>Desinscribir</th></tr>
                 {% for ins in inscripciones %}
                 <tr class="subform-row">
-                   <td>{{ ins.sidPru.sidTprm.sidTprf.nombre }}. {% if ins.sidPru.sidTprm.sexo == 0 %}Masculino, {% elseif ins.sidPru.sidTprm.sexo == 1 %}Femenino, {% endif%}{{ ins.sidPru.sidTprm.entorno }}</td>
+                   <td>{{ ins.sidPru.sidTprm.sidTprf.nombre }}{% if ins.sidPru.sidTprm.sexo == 0 %}, masculino{% elseif ins.sidPru.sidTprm.sexo == 1 %}, femenino{% endif %}{% if entornos|length > 1 %}. {{ ins.sidPru.sidTprm.entorno }}{% endif %}</td>
                    <td>{{ ins.coste|number_format(2, ",", ".") }}€</td>
                    <td>{{ ins.estado }}</td>
                    <td><button id="btnins-{{ ins.sid }}" type="button" class="btn btn-sm btn-default btn-block" data-toggle="button" onClick="modalToggleButton(this)"><span class="glyphicon glyphicon-remove-sign"></span> NO</button></td>
