--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
@@ -110,17 +110,20 @@
                      </tr>
                      {% for ins in atl.pruebas %}
                         {% if ins.sexo == 0 %}
-                           {% set nombrePru = ins.nombre ~ '. Masculino, ' ~ ins.entorno %}
+                           {% set nombrePru = ins.nombre ~ ', masculino' %}
                         {% elseif ins.sexo == 1 %}
-                           {% set nombrePru = ins.nombre ~ '. Femenino, ' ~ ins.entorno %}
+                           {% set nombrePru = ins.nombre ~ ', femenino' %}
                         {% elseif ins.sexo == 2 %}
-                           {% set nombrePru = ins.nombre ~ '. ' ~ ins.entorno %}
+                           {% set nombrePru = ins.nombre %}
+                        {% endif %}
+                        {% if entornos|length > 1 %}
+                           {% set nombrePru = nombrePru ~ '. ' ~ ins.entorno %}
                         {% endif %}
                         <tr>
                            <td><span class="glyphicon glyphicon-chevron-right"></span> {{ nombrePru }}</td>
                            <td class="hidden-xs">{{ ins.fecha|date('d/m/Y') }}</td>
                            <td class="hidden-xs">{{ ins.origen }}</td>
-                           <td class="hidden-xs">{% if ins.codGrupo is not null %}{{ ins.codGrupo }} <button type="button" class="btn btn-xs btn-default pull-right" data-toggle="tooltip" data-placement="top" title="Mostrar grupo" onClick="showModal()"><span class="glyphicon glyphicon-info-sign"></span></button>{% endif %}</td>
+                           <td class="hidden-xs">{% if ins.codGrupo is not null %}{{ ins.codGrupo }} <button type="button" class="btn btn-xs btn-default pull-right" data-toggle="tooltip" data-placement="top" title="Mostrar grupo" onClick="showModal('grupINS', {{ ins.codGrupo }}, null, null)"><span class="glyphicon glyphicon-info-sign"></span></button>{% endif %}</td>
                            <td class="hidden-xs">{{ ins.coste|number_format(2, ',', '.') }}€</td>
                            <td>{{ ins.estado }}</td>
                            <td>{{ ins.numRegistros }} <a type="button" class="btn btn-xs btn-default pull-right visible-xs" data-toggle="tooltip" data-placement="top" title="Registrar marcas" href="{{ path('registrar_intentos', {'atl': atl.id, 'pru': ins.sidPru}) }}"><span class="glyphicon glyphicon-dashboard" aria-label="Registrar marcas"></span></a></td>
