--- a/src/Easanles/AtletismoBundle/Resources/views/Prueba/list_prueba.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Prueba/list_prueba.html.twig
@@ -67,11 +67,14 @@
 
          {% for pru in pruebas %}
          {% if pru.tprm.sexo == 0 %}
-            {% set tpr = pru.tprm.sidTprf.nombre ~ '. Masculino, ' ~ pru.tprm.entorno %}
+            {% set tpr = pru.tprm.sidTprf.nombre ~ ', masculino' %}
          {% elseif pru.tprm.sexo == 1 %}
-            {% set tpr = pru.tprm.sidTprf.nombre ~ '. Femenino, ' ~ pru.tprm.entorno %}
+            {% set tpr = pru.tprm.sidTprf.nombre ~ ', femenino' %}
          {% elseif pru.tprm.sexo == 2 %}
-            {% set tpr = pru.tprm.sidTprf.nombre ~ '. ' ~ pru.tprm.entorno %}
+            {% set tpr = pru.tprm.sidTprf.nombre %}
+         {% endif %}
+         {% if entornos|length > 1 %}
+            {% set tpr = tpr ~ ". "~ pru.tprm.entorno %}
          {% endif %}
          <tr>
             <td>{{ pru.id }}</td>
