--- a/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_resultados.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_resultados.html.twig
@@ -28,6 +28,7 @@
             <li><a class="active" href="{{ path('pantalla_resultados') }}">Resultados</a></li>
             <li><a href="{{ path('pantalla_asistencia') }}">Asistencia a eventos</a></li>
             <li><a href="{{ path('pagos_pendientes') }}">Pagos pendientes</a></li>
+            <li><a href="{{ path('ingresos') }}">Ingresos</a></li>
          </ul>
       </li>{% endif %}
       {% if (app.user is null) or (app.user is not null and not is_granted('ROLE_ADMIN')) %}<li class="active"><a href="{{ path('users_pantalla_resultados') }}">Resultados</a></li>{% endif %}
