--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/form_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/form_inscripcion.html.twig
@@ -22,6 +22,7 @@
             <li><a href="{{ path('pantalla_resultados') }}">Resultados</a></li>
             <li><a href="{{ path('pantalla_asistencia') }}">Asistencia a eventos</a></li>
             <li><a href="{{ path('pagos_pendientes') }}">Pagos pendientes</a></li>
+            <li><a href="{{ path('ingresos') }}">Ingresos</a></li>
          </ul>
       </li>
       <li><a href="{{ path('configuracion') }}">Configuración</a></li>
