--- a/src/Easanles/AtletismoBundle/Resources/views/Miscom/portada_miscom.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Miscom/portada_miscom.html.twig
@@ -26,6 +26,7 @@
             <li><a href="{{ path('pantalla_resultados') }}">Resultados</a></li>
             <li><a href="{{ path('pantalla_asistencia') }}">Asistencia a eventos</a></li>
             <li><a href="{{ path('pagos_pendientes') }}">Pagos pendientes</a></li>
+            <li><a href="{{ path('ingresos') }}">Ingresos</a></li>
          </ul>
       </li>{% endif %}
       {% if (app.user is null) or (app.user is not null and not is_granted('ROLE_ADMIN')) %}<li><a href="{{ path('users_pantalla_resultados') }}">Resultados</a></li>{% endif %}
@@ -66,10 +67,10 @@
       {% for com in coms %}
          <div class="col-xs-6 col-sm-4 col-md-3">
             {% if com.cartel is not null %}
-            <a href="{{ path('users_ver_competicion', {'id': com.sid})}}"><img src="{{ vich_uploader_asset(com, 'cartelFile', 'Easanles\\AtletismoBundle\\Entity\\Competicion') }}" alt="{{ com.nombre }}" class="img-responsive thumbnail"/></a>
+            <a href="{{ path('users_ver_competicion', {'id': com.sid})}}"><img src="{{ vich_uploader_asset(com, 'cartelFile', 'Easanles\\AtletismoBundle\\Entity\\Competicion') }}" alt="{{ com.nombre }}" title="{{ com.nombre }}" class="img-responsive thumbnail"/></a>
             {% else %}
                {% image '@EasanlesAtletismoBundle/Resources/assets/img/sincartel.jpg' %}
-               <a href="{{ path('users_ver_competicion', {'id': com.sid})}}"><img src="{{ asset_url }}" alt="{{ com.nombre }}" class="img-responsive thumbnail"/></a>
+               <a href="{{ path('users_ver_competicion', {'id': com.sid})}}"><img src="{{ asset_url }}" alt="{{ com.nombre }}" title="{{ com.nombre }}" class="img-responsive thumbnail"/></a>
                {% endimage %}
                <h5 class="grid-comname">{{ com.nombre }}</h5>
             {% endif %}
@@ -81,7 +82,7 @@
                      <a type="button" class="btn btn-lg btn-primary btn-block grid-btn" href="{{ path("users_marcas", {"sidCom": com.sid}) }}">Registrar marca</a>
                   {% else %}
                      {% if com.esInscrib == false %}
-                        <button type="button" class="btn btn-lg btn-default btn-block grid-btn" disabled>Inscrito</button>
+                        <a type="button" class="btn btn-lg btn-primary btn-block grid-btn" href="{{ path('users_inscripcion', {'sidCom': com.sid}) }}"><span class="visible-xs">Ver inscrib.</span><span class="hidden-xs">Ver inscripción</span></a>
                      {% else %}
                         {% if com.numpruebas == 1 %}
                            <button type="button" class="btn btn-lg btn-primary btn-block grid-btn" onClick="showModal('desinscrib', '{{ com.nombre }}', '{{ com.sid }}')">Desinscribirse</button>
@@ -149,6 +150,7 @@
                   {% if com.esOficial == false %}
                      {% if com.esInscrib == false %}
                         <p class="text-center text-muted"><span class="visible-xs">Cerrado</span><span class="hidden-xs">Inscripciones cerradas</span></p>
+                        <a type="button" class="btn btn-default btn-block" href="{{ path('users_inscripcion', {'sidCom': com.sid}) }}"><span class="visible-xs">Ver inscrib.</span><span class="hidden-xs">Ver inscripción</span></a>
                      {% else %}
                         {% if com.numpruebas == 1 %}
                            <button type="button" class="btn btn-danger btn-block" onClick="showModal('desinscrib', '{{ com.nombre }}', '{{ com.sid }}')"><span class="visible-xs">Desinscrib.</span><span class="hidden-xs">Desinscribirse</span></button>
