--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,7 @@
 
 {% extends '::base.html.twig' %}
 
-{% block title %}Atletismo{% endblock %}
+{% block title %}{{ gl_appname }}{% endblock %}
 
 {% block css %}
    {% stylesheets '@EasanlesAtletismoBundle/Resources/assets/css/index.css' filter='?uglifycss' output='css/index.min.css' %}
@@ -40,7 +40,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ webRootDir }}"><span class="glyphicon glyphicon-home"></span> Atletismo</a>
+            <a class="navbar-brand" href="{{ webRootDir }}"><span class="glyphicon glyphicon-home"></span> {{ gl_appname }}</a>
          </div>
          <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -114,20 +114,13 @@
        <div class="container-fluid">
           <div class="row">
              <div class="col-xs-12 col-sm-8 col-md-9">
+                {% if jumbotron == 1 %}
                 <div class="jumbotron">
-                   <h1>Atletismo</h1>
-                   <p class="lead">Sistema de gestión de un club de atletismo</p>
+                   {% if jumbolin1 != "" %}<h1>{{ jumbolin1 }}</h1>{% endif %}
+                   {% if jumbolin2 != "" %}<p class="lead">{{ jumbolin2 }}</p>{% endif %}
                 </div>
-                <p>O obxectivo principal do proxecto é dispor dunha alternativa baseada en Software Libre para a xestión das labores administrativas dun club de atletismo.</p>
-                <p>Os obxectivos a acadar co proxecto son os seguintes:</p>
-                <ul>
-                   <li>Xestionar os asociados: altas, mantemento e baixas dos membros do club.</li>
-                   <li>Controlar as cotas dos socios do club.</li>
-                   <li>Controlar as inscricións dos atletas nas probas recomendadas polo club.</li>
-                   <li>Rexistrar as marcas dos atletas para cada unha das probas nas que participe</li>
-                   <li>Xestión de contabilidade das cotas dos asociados simplificada (ingresos/gastos).</li>
-                   <li>A aplicación debe ser completamente xestionable a través dunha interface web.</li>
-                </ul>
+                {% endif %}
+                {{ bienvenida|raw }}
              </div>
              <div class="well hidden-xs col-sm-4 col-md-3">
                 <form action="{{ path('login_check') }}" method="post" class="">
@@ -160,7 +153,7 @@
     <footer class="footer">
        <div class="container">
           {% block footer %}
-             <small><strong>Atletismo</strong><span class="text-muted"><span class="hidden-xs"> - Sistema de gestión de un club de atletismo</span><div class="pull-right"><a href="https://github.com/easanles/atletismo-edu">GitHub</a> | Eduardo Alonso Sanlés - &copy;2016</div></span></small>
+             <small><strong>{{ gl_appname }}</strong><span class="text-muted"><span class="hidden-xs"> - {{ gl_appdesc }}</span><div class="pull-right"><a href="https://github.com/easanles/atletismo-edu">GitHub</a> | {{ gl_author }} - &copy;{{ gl_year }}</div></span></small>
           {% endblock %}
        </div>
     </footer>
